定义各层返回模型结构